<resources>
    <string name="app_name">RunnerApp</string>
    <string name="button">Previous tracks</string>
    <string name="button2">Record track</string>
    <string name="button3">Start</string>
    <string name="button4">Stop</string>
    <string name="header">Record track</string>
    <string name="timervalue">00:00:00</string>
    <string name="distance">Distance ran:</string>
    <string name="Speed">Speed:</string>
    <string name="distancevalue">0 m</string>
    <string name="avgspeedvalue">0 km/h</string>
    <string name="headernaming">Enter a name for your track</string>
    <string name="length">Length:</string>
    <string name="time">Time:</string>
    <string name="lengthvalue">5.51 km</string>
    <string name="timevalue">00:16:57</string>
    <string name="nameholder">Name your track</string>
    <string name="cancelbtn">Cancel</string>
    <string name="savebtn">Save track</string>
    <string name="aot">ahead</string>
    <string name="recyclerheader">Your tracks</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="login_failed">"Login failed"</string>
    <string name="password">password</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_chosen_track_map2">Map</string>
    <string name="title_activity_choosen_track_map2">Chosen track</string>
    <string name="title_activity_maps2">Map</string>
    <string name="Update">UPDATE</string>
    <string name="move_map_and_zoom_automatically">Move and zoom map automatically    </string>
    <string name="average_speed">Average speed:</string>
    <string name="_0m_sec">0 km/h</string>
    <string name="you_are">You are</string>
    <string name="trackname">Trackname</string>
    <string name="distance_to_goal">Distance to goal:</string>
    <string name="textview">TextView</string>
    <string name="m">m</string>
    <string name="before_starting_the_race_against_your_ghost_make_sure_you_have_the_same_starting_position">Before starting the race against your ghost make sure you have the same starting position! Long press to start and stop!</string>
    <string name="by">by</string>
    <string name="voice_updates">"Voice notifications           "</string>
    <string name="trailing">trailing</string>
    <string name="kmh"> km/h</string>
    <string name="meters"> meters</string>
    <string name="ahead">ahead</string>
    <string name="yousghostwonbetterluck">Your ghost won!! Better luck next time!</string>
    <string name="running">Running..</string>
    <string name="kmh2"> km/h</string>
    <string name="running2">Running..</string>
    <string name="title_activity_stats">StatsActivity</string>
    <string name="timedevelopment">Time development in graph (all)</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


</resources>