<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBGp1"
    tools:context=".MapsActivity">

    <Button
        android:id="@+id/startbutton"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:background="@layout/roundedcorners"
        android:text="@string/button3"
        android:textColor="@color/colorBTextGreen"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header" />

    <Button
        android:id="@+id/stopButton"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:layout_marginEnd="30dp"
        android:background="@layout/roundedcorners"
        android:text="@string/button4"
        android:textColor="@color/colorBTextRed"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/startbutton"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/header"
        android:layout_width="282dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/header"
        android:textAlignment="center"
        android:textColor="@color/colorTVwhite"
        android:textSize="38sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/timer"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_marginTop="4dp"
        android:text="@string/timervalue"
        android:textAlignment="center"
        android:textColor="@color/colorTVwhite"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stopButton" />

    <TextView
        android:id="@+id/aheadortrailing"
        android:layout_width="165dp"
        android:layout_height="34dp"
        android:layout_marginStart="35dp"
        android:text="@string/distance"
        android:textColor="@color/colorTVwhite"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/distancevalue"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/speed"
        android:layout_width="165dp"
        android:layout_height="34dp"
        android:layout_marginStart="35dp"
        android:text="@string/Speed"
        android:textColor="@color/colorTVwhite"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/speedvalue"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/distancevalue"
        android:layout_width="wrap_content"
        android:layout_height="34dp"
        android:layout_marginStart="51dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="10dp"
        android:text="@string/distancevalue"
        android:textAlignment="center"
        android:textColor="@color/colorBTextGreen"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/speed"
        app:layout_constraintTop_toBottomOf="@+id/timer" />

    <TextView
        android:id="@+id/speedvalue"
        android:layout_width="wrap_content"
        android:layout_height="34dp"
        android:layout_marginStart="51dp"
        android:layout_marginEnd="10dp"
        android:text="@string/avgspeedvalue"
        android:textAlignment="center"
        android:textColor="@color/colorBTextGreen"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/speed"
        app:layout_constraintTop_toBottomOf="@+id/distancevalue" />

    <TextView
        android:id="@+id/tvAvgSpeedValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="51dp"
        android:layout_marginEnd="10dp"
        android:text="@string/_0m_sec"
        android:textColor="@color/colorBTextGreen"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvAvgSpeed"
        app:layout_constraintTop_toBottomOf="@+id/speedvalue" />

    <Switch
        android:id="@+id/mySwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:checked="true"
        android:showText="false"
        android:text="@string/move_map_and_zoom_automatically"
        android:textColor="@color/design_default_color_on_primary"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAvgSpeed" />

    <TextView
        android:id="@+id/tvAvgSpeed"
        android:layout_width="165dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:text="@string/average_speed"
        android:textColor="@color/colorTVwhite"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/speed" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mySwitch"
        tools:context=".MapsActivity" />





</androidx.constraintlayout.widget.ConstraintLayout>