<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBGp1"
    tools:context=".NamingTrack">

    <EditText
        android:id="@+id/trackName"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:ems="10"
        android:hint="track name"
        android:inputType="textPersonName"
        android:textColor="@color/colorTVwhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerName" />

    <TextView
        android:id="@+id/headerName"
        android:layout_width="378dp"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:text="@string/headernaming"
        android:textAlignment="center"
        android:textColor="@color/colorTVwhite"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="124dp"
        android:layout_height="50dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        android:text="@string/length"
        android:textAlignment="viewStart"
        android:textColor="@color/colorTVwhite"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trackName" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="124dp"
        android:layout_height="50dp"
        android:layout_marginEnd="60dp"
        android:text="@string/lengthvalue"
        android:textColor="@color/colorBTextGreen"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/timeValue"
        android:layout_width="124dp"
        android:layout_height="50dp"
        android:layout_marginEnd="60dp"
        android:text="@string/timevalue"
        android:textColor="@color/colorBTextGreen"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="124dp"
        android:layout_height="50dp"
        android:layout_marginStart="60dp"
        android:text="@string/time"
        android:textAlignment="viewStart"
        android:textColor="@color/colorTVwhite"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/timeValue"
        app:layout_constraintEnd_toStartOf="@+id/timeValue"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent" />


    <Button
        android:id="@+id/save"
        android:layout_width="145dp"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:background="@layout/roundedcorners"
        android:text="@string/savebtn"
        android:textColor="@color/colorBTextGreen"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timeValue" />

    <Button
        android:id="@+id/cancelBtn"
        android:layout_width="145dp"
        android:layout_height="60dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:background="@layout/roundedcorners"
        android:text="@string/cancelbtn"
        android:textColor="@color/colorBTextRed"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />
</androidx.constraintlayout.widget.ConstraintLayout>