<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBGp1"
    tools:context=".RecordTrack">

    <Button
        android:id="@+id/startbutton"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:background="@layout/roundedcorners"
        android:text="@string/button3"
        android:textColor="@color/colorBTextGreen"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header" />

    <Button
        android:id="@+id/stopbutton"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_marginEnd="10dp"
        android:background="@layout/roundedcorners"
        android:text="@string/button4"
        android:textColor="@color/colorBTextRed"
        android:textSize="30sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/startbutton"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/header"
        android:layout_width="282dp"
        android:layout_height="71dp"
        android:layout_marginTop="10dp"
        android:text="@string/header"
        android:textAlignment="center"
        android:textColor="@color/colorTVwhite"
        android:textSize="42sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/timer"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_marginTop="12dp"
        android:text="@string/timervalue"
        android:textAlignment="center"
        android:textColor="@color/colorTVwhite"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stopbutton" />

    <TextView
        android:id="@+id/distance"
        android:layout_width="165dp"
        android:layout_height="34dp"
        android:layout_marginStart="35dp"
        android:text="@string/distance"
        android:textColor="@color/colorTVwhite"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/distancevalue"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/avgspeed"
        android:layout_width="165dp"
        android:layout_height="34dp"
        android:layout_marginStart="35dp"
        android:text="@string/avgspeed"
        android:textColor="@color/colorTVwhite"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/avgspeedvalue"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/distancevalue"
        android:layout_width="wrap_content"
        android:layout_height="34dp"
        android:layout_marginStart="51dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="10dp"
        android:text="@string/distancevalue"
        android:textAlignment="center"
        android:textColor="@color/colorBTextGreen"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/avgspeed"
        app:layout_constraintTop_toBottomOf="@+id/timer" />

    <TextView
        android:id="@+id/avgspeedvalue"
        android:layout_width="wrap_content"
        android:layout_height="34dp"
        android:layout_marginStart="51dp"
        android:layout_marginEnd="10dp"
        android:text="@string/avgspeedvalue"
        android:textAlignment="center"
        android:textColor="@color/colorBTextGreen"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/avgspeed"
        app:layout_constraintTop_toBottomOf="@+id/distancevalue" />

    <com.google.android.gms.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="398dp"
        android:layout_height="485dp"
        android:layout_marginTop="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/avgspeed" />

</androidx.constraintlayout.widget.ConstraintLayout>