<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBGp1"
    tools:context=".DefeatedGhostActivity">


    <TextView
        android:id="@+id/headerName"
        android:layout_width="378dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="60dp"
        android:text="Congratulations! You beat your best time on"
        android:textAlignment="center"
        android:textColor="@color/colorTVwhite"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="124dp"
        android:layout_height="50dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="24dp"
        android:text="@string/length"
        android:textAlignment="viewStart"
        android:textColor="@color/colorTVwhite"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTrackName" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="124dp"
        android:layout_height="50dp"
        android:layout_marginEnd="60dp"
        android:text="@string/lengthvalue"
        android:textColor="@color/colorBTextGreen"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/timeValue"
        android:layout_width="124dp"
        android:layout_height="50dp"
        android:layout_marginEnd="60dp"
        android:text="@string/timevalue"
        android:textColor="@color/colorBTextGreen"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="124dp"
        android:layout_height="50dp"
        android:layout_marginStart="60dp"
        android:text="@string/time"
        android:textAlignment="viewStart"
        android:textColor="@color/colorTVwhite"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/timeValue"
        app:layout_constraintEnd_toStartOf="@+id/timeValue"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent" />


    <Button
        android:id="@+id/save"
        android:layout_width="155dp"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="28dp"
        android:background="@layout/roundedcorners"
        android:text="@string/common_google_play_services_update_button"
        android:textColor="@color/colorBTextGreen"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wannadoTextV" />

    <Button
        android:id="@+id/cancelBtn"
        android:layout_width="155dp"
        android:layout_height="60dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="30dp"
        android:background="@layout/roundedcorners"
        android:text="@string/cancelbtn"
        android:textColor="@color/colorBTextRed"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wannadoTextV" />

    <TextView
        android:id="@+id/wannadoTextV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="Do you wish to update your old track and track-record? "
        android:textColor="@color/cardview_light_background"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timeValue" />

    <TextView
        android:id="@+id/tvTrackName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="trackName"
        android:textColor="@color/cardview_light_background"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerName" />
</androidx.constraintlayout.widget.ConstraintLayout>